force-app/main/default/objects/sked_Optimization_Queue__c/sked_Optimization_Queue__c.object-meta.xml
<CustomObject>
    <label>Optimization Queue</label>
    <nameField>
        <label>Optimization Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optimization Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>