force-app/main/default/objects/sked_Optimization_Queue__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Optimization Queues</relationshipLabel>
    <relationshipName>sked_Optimization_Queues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>