force-app/main/default/objects/sked_Optimization_Queue__c/fields/sked_Drive_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Count__c</fullName>
    <label>Drive Count</label>
    <summaryForeignKey>sked_Optimization_Queue_Item__c.sked_Optimization_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>