force-app/main/default/objects/sked_Optimization_Queue__c/fields/sked_Optimization_Run__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optimization Run</label>
    <referenceTo>sked_Optimization_Run__c</referenceTo>
    <relationshipLabel>Optimization Queues</relationshipLabel>
    <relationshipName>sked_Optimization_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>